--- a/package.json
+++ b/package.json
@@ -14,20 +14,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.5",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.50.0",
-    "@trpc/client": "^11.0.0-rc.446",
-    "@trpc/react-query": "^11.0.0-rc.446",
-    "@trpc/server": "^11.0.0-rc.446",
-    "drizzle-orm": "^0.33.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
+    "leva": "^0.9.35",
+    "lucide-react": "^0.439.0",
     "next": "^14.2.4",
+    "next-transpile-modules": "^10.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
-    "zod": "^3.23.3"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
+    "three-stdlib": "^2.32.2",
+    "zod": "^3.23.3",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
