added basic theater js functionality

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@react-three/fiber": "^8.17.5",
     "@react-three/postprocessing": "^2.16.2",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@theatre/core": "0.5",
+    "@theatre/r3f": "0.5",
+    "@theatre/studio": "0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
