--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.112.0",
-    "@react-three/fiber": "^8.17.5",
+    "@react-three/fiber": "^8.17.7",
     "@react-three/postprocessing": "^2.16.2",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@theatre/core": "0.5",
-    "@theatre/r3f": "0.5",
-    "@theatre/studio": "0.5",
+    "@theatre/core": "0.7.2",
+    "@theatre/r3f": "0.7.2",
+    "@theatre/studio": "0.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
-    "geist": "^1.3.0",
+    "framer-motion": "^11.5.4",
+    "geist": "^1.3.1",
     "install": "^0.13.0",
     "leva": "^0.9.35",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.4",
+    "next": "^14.2.11",
     "next-transpile-modules": "^10.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
@@ -37,28 +38,28 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
-    "three-stdlib": "^2.32.2",
-    "zod": "^3.23.3",
+    "three-stdlib": "^2.33.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
+    "@types/eslint": "^8.56.12",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.168.0",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "drizzle-kit": "^0.24.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "drizzle-kit": "^0.24.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.11",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.4.11",
+    "typescript": "^5.6.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.37.0"
