--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "lib": ["dom", "dom.iterable", "ES2022"],
     "noEmit": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "jsx": "preserve",
     "plugins": [{ "name": "next" }],
     "incremental": true,
