--- a/package.json
+++ b/package.json
@@ -14,23 +14,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.61",
+    "@clerk/elements": "^0.15.4",
+    "@clerk/nextjs": "5.0.0-beta.46",
+    "@clerk/shared": "^2.8.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-three/drei": "^9.112.0",
+    "@react-three/drei": "^9.112.1",
     "@react-three/fiber": "^8.17.7",
     "@react-three/postprocessing": "^2.16.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@theatre/core": "0.7.2",
     "@theatre/r3f": "0.7.2",
     "@theatre/studio": "0.7.2",
+    "ai": "^3.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.6",
     "geist": "^1.3.1",
     "install": "^0.13.0",
     "leva": "^0.9.35",
+    "lucide": "^0.445.0",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.11",
+    "next": "^14.2.13",
     "next-transpile-modules": "^10.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
@@ -46,19 +52,19 @@
     "@svgr/webpack": "^8.1.0",
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.16.5",
-    "@types/react": "^18.3.6",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.168.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.11",
+    "eslint-config-next": "^14.2.13",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   },
   "ct3aMetadata": {
