--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@clerk/nextjs": "5.0.0-beta.46",
     "@clerk/shared": "^2.8.1",
     "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.112.1",
     "@react-three/fiber": "^8.17.7",
