--- a/package.json
+++ b/package.json
@@ -15,29 +15,33 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.61",
-    "@clerk/elements": "^0.15.4",
+    "@clerk/elements": "^0.15.5",
     "@clerk/nextjs": "5.0.0-beta.46",
-    "@clerk/shared": "^2.8.1",
+    "@clerk/shared": "^2.8.2",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-three/drei": "^9.112.1",
-    "@react-three/fiber": "^8.17.7",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.8",
     "@react-three/postprocessing": "^2.16.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@theatre/core": "0.7.2",
     "@theatre/r3f": "0.7.2",
     "@theatre/studio": "0.7.2",
-    "ai": "^3.4.0",
+    "@vercel/postgres": "^0.10.0",
+    "ai": "^3.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
     "framer-motion": "^11.5.6",
     "geist": "^1.3.1",
     "install": "^0.13.0",
     "leva": "^0.9.35",
     "lucide": "^0.445.0",
     "lucide-react": "^0.439.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.13",
     "next-transpile-modules": "^10.0.1",
     "postgres": "^3.4.4",
@@ -53,20 +57,22 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/eslint": "^8.56.12",
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.8",
+    "@types/node": "^20.16.6",
+    "@types/pg": "^8.11.10",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.168.0",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.13",
     "eslint-plugin-drizzle": "^0.2.3",
+    "pg": "^8.12.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.12",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   },
   "ct3aMetadata": {
