--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@clerk/elements": "^0.15.5",
     "@clerk/nextjs": "5.0.0-beta.46",
     "@clerk/shared": "^2.8.2",
+    "@payloadcms/db-vercel-postgres": "3.0.0-beta.108",
+    "@payloadcms/next": "3.0.0-beta.108",
+    "@payloadcms/plugin-cloud": "3.0.0-beta.108",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.108",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.114.0",
-    "@react-three/fiber": "^8.17.8",
+    "@react-three/fiber": "9.0.0-beta.1",
     "@react-three/postprocessing": "^2.16.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@theatre/core": "0.7.2",
     "@theatre/r3f": "0.7.2",
     "@theatre/studio": "0.7.2",
+    "@types/sharp": "^0.32.0",
     "@vercel/postgres": "^0.10.0",
     "ai": "^3.4.2",
     "class-variance-authority": "^0.7.0",
@@ -37,16 +42,20 @@
     "drizzle-zod": "^0.5.1",
     "framer-motion": "^11.5.6",
     "geist": "^1.3.1",
+    "graphql": "^16.8.1",
     "install": "^0.13.0",
     "leva": "^0.9.35",
     "lucide": "^0.445.0",
     "lucide-react": "^0.439.0",
     "nanoid": "^5.0.7",
-    "next": "^14.2.13",
+    "next": "15.0.0-canary.160",
     "next-transpile-modules": "^10.0.1",
+    "payload": "3.0.0-beta.108",
     "postgres": "^3.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-778e1ed2-20240926",
+    "react-dom": "19.0.0-rc-778e1ed2-20240926",
+    "react-test-renderer": "19.0.0-beta-94eed63c49-20240425",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
@@ -59,14 +68,16 @@
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.16.6",
     "@types/pg": "^8.11.10",
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "@types/react-test-renderer": "18.0.7",
+    "@types/scheduler": "0.23.0",
     "@types/three": "^0.168.0",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.13",
+    "eslint-config-next": "15.0.0-rc.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.12.0",
     "postcss": "^8.4.47",
@@ -74,6 +85,10 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   },
   "ct3aMetadata": {
     "initVersion": "7.37.0"
