sanity integration in demo

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
     "@react-three/postprocessing": "^2.16.2",
+    "@sanity/image-url": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@theatre/core": "0.7.2",
     "@theatre/r3f": "0.7.2",
@@ -43,6 +44,7 @@
     "lucide-react": "^0.439.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.13",
+    "next-sanity": "^9.5.0",
     "next-transpile-modules": "^10.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
